@@ -1,3 +1,8 @@
+Thu Dec 19 00:26:11 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (garbage_collect_body): lazy_sweep setting should work
+	  without USE_RGENGC.
+
 Wed Dec 18 23:31:04 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (gc_profile_dump_major_reason): fix this function because major_reason
